--- a/layouts/partials/footer/footer.html
+++ b/layouts/partials/footer/footer.html
@@ -18,14 +18,14 @@
 });
 </script>
 
-    <section class="copyright">
-        &copy; 
-        {{ if and (.Site.Params.footer.since) (ne .Site.Params.footer.since (int (now.Format "2006"))) }}
-            {{ .Site.Params.footer.since }} - 
-        {{ end }}
-        {{ now.Format "2006" }} <a href="https://stack-theme-mod.vercel.app/">Example Site</a>·<i class="fas fa-bell"></i> <a id="days">0</a>Days<br>
-      {{$var :=  $scratch.Get "total"}}{{$var = div $var 100.0}}{{$var = math.Ceil $var}}{{$var = div $var 10.0}}共书写了{{$var}}k字·共 {{ len (where .Site.RegularPages "Section" "post") }}篇文章</br><span><p>
-    </section>
+<section class="copyright">
+  &copy; 
+  {{ if and (.Site.Params.footer.since) (ne .Site.Params.footer.since (int (now.Format "2006"))) }}
+      {{ .Site.Params.footer.since }} - 
+  {{ end }}
+  {{ now.Format "2006" }} <a href="alecareuticec.top">松茸儿乐园</a>·<i class="fas fa-bell"></i> <a id="days">0</a>Days<br>
+{{$var :=  $scratch.Get "total"}}{{$var = div $var 100.0}}{{$var = math.Ceil $var}}{{$var = div $var 10.0}}共书写了{{$var}}k字·共 {{ len (where .Site.RegularPages "Section" "post") }}篇文章</br><span><p>
+</section>
     
     <section class="powerby">
         {{ with .Site.Params.footer.customText }}
@@ -44,7 +44,7 @@
     </section>
 
 <script>
-var s1 = '2022-02-12';//设置为建站时间
+var s1 = '2024-01-04';//2022.01.04
 s1 = new Date(s1.replace(/-/g, "/"));
 s2 = new Date();
 var days = s2.getTime() - s1.getTime();
