--- a/assets/scss/variables.scss
+++ b/assets/scss/variables.scss
@@ -1,5 +1,5 @@
 $defaultTagBackgrounds: #8ea885, #df7988, #0177b8, #ffb900, #6b69d6;
-$defaultTagColors: #413e3b, #413e3b, #413e3b, #413e3b, #413e3b;
+$defaultTagColors: #fff, #fff, #fff, #fff, #fff;
 
 /*
 *   Global style
@@ -13,7 +13,7 @@ $defaultTagColors: #413e3b, #413e3b, #413e3b, #413e3b, #413e3b;
         --main-top-padding: 50px;
     }
 
-    --body-background: #b1aca5;
+    --body-background: #f5f5fa;
 
     --accent-color: #34495e;
     --accent-color-darker: #2c3e50;
