添加了音乐列表

--- a/layouts/partials/widget/music.html
+++ b/layouts/partials/widget/music.html
@@ -1,5 +1,9 @@
-<audio controls>
-    <source src="/music/灼熱の地へ.mp3" type="audio/mpeg">
-    Your browser does not support the audio element.
-  </audio>
-  
+<!-- 音乐播放器 -->
+<audio id="musicPlayer" controls>
+  <source src="/music/song1.mp3" type="audio/mpeg">
+  Your browser does not support the audio element.
+</audio>
+
+<!-- 播放控制按钮 -->
+<button onclick="playPrevButton()">Previous</button>
+<button onclick="playNextButton()">Next</button>
