--- a/layouts/partials/footer/footer.html
+++ b/layouts/partials/footer/footer.html
@@ -16,17 +16,16 @@
 })('//cdn.bootcss.com/pangu/3.3.0/pangu.min.js', function() {
   pangu.spacingPage();
 });
-
 </script>
 
-    <section class="copyright">
-        &copy; 
-        {{ if and (.Site.Params.footer.since) (ne .Site.Params.footer.since (int (now.Format "2006"))) }}
-            {{ .Site.Params.footer.since }} - 
-        {{ end }}
-        {{ now.Format "2006" }} <a href="https://alecareuticec.top/">再报错就不礼貌了</a>·<i class="fas fa-bell"></i> <a id="days">0</a>Days<br>
-      {{$var :=  $scratch.Get "total"}}{{$var = div $var 100.0}}{{$var = math.Ceil $var}}{{$var = div $var 10.0}}共书写了{{$var}}k字·共 {{ len (where .Site.RegularPages "Section" "post") }}篇文章</br><span><p>
-    </section>
+<section class="copyright">
+  &copy; 
+  {{ if and (.Site.Params.footer.since) (ne .Site.Params.footer.since (int (now.Format "2006"))) }}
+      {{ .Site.Params.footer.since }} - 
+  {{ end }}
+  {{ now.Format "2006" }} <a href="alecareuticec.top">松茸儿乐园</a>·<i class="fas fa-bell"></i> <a id="days">0</a>Days<br>
+{{$var :=  $scratch.Get "total"}}{{$var = div $var 100.0}}{{$var = math.Ceil $var}}{{$var = div $var 10.0}}共书写了{{$var}}k字·共 {{ len (where .Site.RegularPages "Section" "post") }}篇文章</br><span><p>
+</section>
     
     <section class="powerby">
         {{ with .Site.Params.footer.customText }}
@@ -43,10 +42,9 @@
         {{ T "footer.designedBy" (dict "Theme" $Theme "DesignedBy" $DesignedBy) | safeHTML }}<br />
          <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/deed.zh" target="_blank">© Licensed Under CC BY-NC-SA 4.0</a>
     </section>
-    
 
 <script>
-var s1 = '2024-01-05';//设置为建站时间
+var s1 = '2024-01-04';//2022.01.04
 s1 = new Date(s1.replace(/-/g, "/"));
 s2 = new Date();
 var days = s2.getTime() - s1.getTime();
