--- a/assets/scss/grid.scss
+++ b/assets/scss/grid.scss
@@ -29,7 +29,7 @@
         }
 
         @include respond(xl) {
-            max-width: 1536px;
+            max-width: 1240px;
             --left-sidebar-max-width: 15%;
             --right-sidebar-max-width: 25%;
         }
@@ -47,7 +47,7 @@
         }
 
         @include respond(xl) {
-            max-width: 1280px;
+            max-width: 1050x;
         }
     }
 }
