哎哟喂怎么没搞头像

--- a/assets/scss/partials/sidebar.scss
+++ b/assets/scss/partials/sidebar.scss
@@ -61,8 +61,8 @@
 
 	.site-avatar {
         position: relative;
-        margin-left:auto; //站点头像居中
-		margin-right:right; //站点头像居中
+        margin-left:0; //站点头像居中
+		margin-right:auto; //站点头像居中
         width: var(--sidebar-avatar-size);
         height: var(--sidebar-avatar-size);
 
