先存 然后爆了

--- a/layouts/partials/footer/footer.html
+++ b/layouts/partials/footer/footer.html
@@ -23,7 +23,7 @@
   {{ if and (.Site.Params.footer.since) (ne .Site.Params.footer.since (int (now.Format "2006"))) }}
       {{ .Site.Params.footer.since }} - 
   {{ end }}
-  {{ now.Format "2006" }} <a href="alecareuticec.top">你再报错就不礼貌了</a>·<i class="fas fa-bell"></i> <a id="days">0</a>Days<br>
+  {{ now.Format "2006" }} <a href="alecareuticec.top">再报错就不礼貌了</a>·<i class="fas fa-bell"></i> <a id="days">0</a>Days<br>
 </section>
     
     <section class="powerby">
