我超，评论区

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -18,9 +18,9 @@
 
     {{ partial "article/components/related-contents" . }}
      
-    {{ if or (not (isset .Params "comments")) (eq .Params.comments "true")}} 
-        {{ partial "comments/include" . }}
-    {{ end }}
+    {{ if not (eq .Site.Params.comments false) }}
+    {{ partial "comments/include" . }}
+{{ end }}
 
     {{ partialCached "footer/footer" . }}
 
