--- a/layouts/partials/comments/provider/waline.html
+++ b/layouts/partials/comments/provider/waline.html
@@ -4,6 +4,19 @@
     .waline-container {
         background-color: var(--card-background);
         border-radius: var(--card-border-radius);
+        box-shadow: var(--shadow-l2);
+        padding: var(--card-padding);
+          /* 主题色 */
+        --waline-theme-color: #0d262d; //主题色，提交按钮和ID颜色
+        --waline-active-color: #bababa; //鼠标移到提交按钮上的颜色
+          /* 徽章 */
+        --waline-badge-color: #34495e; //博主徽章色
+         /* 背景设置为透明 */
+        --waline-bgcolor: transparent;
+        --waline-font-size: 16px;
+        --waline-info-font-size: 10px;
+        background-color: var(--card-background);
+        border-radius: var(--card-border-radius);
         box-shadow: var(--shadow-l1);
         padding: var(--card-padding);
     }
