--- a/layouts/partials/article/components/details.html
+++ b/layouts/partials/article/components/details.html
@@ -34,7 +34,7 @@
 
         {{ if .Site.Params.article.readingTime }}
             <div>
-                {{ partial "helper/icon" "clock" }}
+                {{ partial "helper/icon" "keyboard" }}
                 <time class="article-words">
                     {{ .WordCount }}字
                 </time>
