--- a/layouts/partials/head/head.html
+++ b/layouts/partials/head/head.html
@@ -23,3 +23,5 @@
 
 {{- template "_internal/google_analytics.html" . -}}
 {{- partial "head/custom.html" . -}}
+
+<meta name="robots" content="noindex">
