--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -143,3 +143,15 @@ body{cursor:url(/img/111.png), default;} //默认时的鼠标样式
 a:hover{cursor:url(/img/222.png), pointer;} //指向链接时的鼠标样式
 input {cursor: url(/img/111.png), text;} //
 button:hover {cursor: url(/img/222.png), pointer;}
+
+
+details {
+    border: 0px solid #aaa;
+    border-radius: 4px;
+    padding: 0.5em 0.5em 0;
+    background: #909fa6;
+    color: #000000;
+  }
+
+
+  
